--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,28 @@
 .option-container {
     width: 500px;
     height: 50px;
+    margin: 30px 0;
     background: yellow;
+    display: flex;
+    align-items: center;
 }
 
 .submarine {
     background: green;
 }
+
+.cruiser {
+    background: purple;
+}
+
+.battleship {
+    background: orange;
+}
+
+.carrier {
+    background: blue;
+}
+
 .destroyer {
     background: brown;
 }
@@ -20,6 +36,24 @@
 
 .submarine-preview {
     width: 30px;
+    height: 10px;
+    margin: 3px;
+}
+
+.cruiser-preview {
+    width: 30px;
+    height: 10px;
+    margin: 3px;
+}
+
+.battleship-preview {
+    width: 40px;
+    height: 10px;
+    margin: 3px;
+}
+
+.carrier-preview {
+    width: 50px;
     height: 10px;
     margin: 3px;
 }
