--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,16 @@
 
+#gamesboard-container {
+     width: 500px;
+     display: flex;
+     justify-content: space-between;
+}
+.game-board {
+    width: 200px;
+    height: 200px;
+
+}
+
+
 .option-container {
     width: 500px;
     height: 50px;
