--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,15 @@
 .game-board {
     width: 200px;
     height: 200px;
+    display: flex;
+    flex-wrap:wrap;
 
 }
 
+.block {
+    width: 20px;
+    height: 20px;
+}
 
 .option-container {
     width: 500px;
